--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-gifted-chat": "^0.9.11",
     "react-native-web": "^0.11.4",
     "socket.io-client": "^2.2.0"
   },
   "devDependencies": {
+    "eslint": "^6.1.0",
     "babel-preset-expo": "^5.1.1"
   },
   "private": true
